# t2v

./: .gitignore  README.md  eval.py  main.py  pyproject.toml  repro_crash.py  train.py  train_a.py  train_b.py  train_c.py  verify_fix.py
blocks/: attention.py  consistency.py  decoder.py  mamba2.py  rope.py
data/: augment.py  dataloader.py
models/: base.py  model_a.py  model_b.py  model_c.py
